--- a/service/package.json
+++ b/service/package.json
@@ -4,7 +4,8 @@
   "description": "为社区应用提供http、数据、API等服务",
   "main": "www/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --exec babel-node www/server.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,16 @@
     "koa-static": "^5.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.11.0"
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.11.0",
+    "nodemon": "^2.0.6",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.1.0",
+    "webpack-node-externals": "^2.5.2"
   }
 }
