--- a/service/package.json
+++ b/service/package.json
@@ -4,8 +4,11 @@
   "description": "为社区应用提供http、数据、API等服务",
   "main": "www/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node www/server.js"
+    "start": "nodemon --exec babel-node www/server.js",
+    "build": "cross-env NODE_ENV=prod webpack --config build/webpack.config.prod.js",
+    "dev": "cross-env NODE_ENV=dev nodemon --exec babel-node --inspect ./www/server.js",
+    "clear": "rimraf dis",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -31,8 +34,11 @@
     "cross-env": "^7.0.2",
     "eslint": "^7.11.0",
     "nodemon": "^2.0.6",
+    "rimraf": "^3.0.2",
+    "terser-webpack-plugin": "^5.0.0",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.1.0",
+    "webpack-merge": "^5.2.0",
     "webpack-node-externals": "^2.5.2"
   }
 }
