--- a/service/package.json
+++ b/service/package.json
@@ -24,6 +24,8 @@
     "koa-helmet": "^6.0.0",
     "koa-json": "^2.0.2",
     "koa-static": "^5.0.0",
+    "moment": "^2.29.1",
+    "nodemailer": "^6.4.14",
     "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
