--- a/client/front/pc_web_app/package.json
+++ b/client/front/pc_web_app/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "css-loader": "^5.0.0",
+    "uuid": "^8.3.1",
     "vee-validate": "^3.4.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
