--- a/service/package.json
+++ b/service/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@koa/router": "^9.4.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
     "koa-combine-routers": "^4.0.2",
@@ -23,9 +24,11 @@
     "koa-compress": "^5.0.1",
     "koa-helmet": "^6.0.0",
     "koa-json": "^2.0.2",
+    "koa-jwt": "^4.0.0",
     "koa-static": "^5.0.0",
     "moment": "^2.29.1",
     "nodemailer": "^6.4.14",
+    "redis": "^3.0.2",
     "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
