--- a/service/package.json
+++ b/service/package.json
@@ -27,8 +27,10 @@
     "koa-jwt": "^4.0.0",
     "koa-static": "^5.0.0",
     "moment": "^2.29.1",
+    "mongoose": "^5.10.10",
     "nodemailer": "^6.4.14",
     "redis": "^3.0.2",
+    "saslprep": "^1.0.3",
     "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
