--- a/service/package.json
+++ b/service/package.json
@@ -42,6 +42,10 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "eslint": "^7.12.1",
+    "eslint-config-standard": "^16.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "nodemon": "^2.0.6",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^5.0.3",
