--- a/service/package.json
+++ b/service/package.json
@@ -17,6 +17,7 @@
     "@koa/cors": "^3.1.0",
     "@koa/router": "^9.4.0",
     "bcrypt": "^5.0.0",
+    "dayjs": "^1.9.4",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
@@ -27,7 +28,6 @@
     "koa-json": "^2.0.2",
     "koa-jwt": "^4.0.0",
     "koa-static": "^5.0.0",
-    "moment": "^2.29.1",
     "mongoose": "^5.10.11",
     "nodemailer": "^6.4.14",
     "redis": "^3.0.2",
