--- a/service/package.json
+++ b/service/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.10.11",
     "nodemailer": "^6.4.14",
     "redis": "^3.0.2",
+    "require-context": "^1.1.0",
     "saslprep": "^1.0.3",
     "svg-captcha": "^1.4.0"
   },
