--- a/service/package.json
+++ b/service/package.json
@@ -10,6 +10,9 @@
     "clear": "rimraf dis",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "_moduleAliases": {
+    "@": "./src"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -28,6 +31,7 @@
     "koa-json": "^2.0.2",
     "koa-jwt": "^4.0.0",
     "koa-static": "^5.0.0",
+    "module-alias": "^2.2.2",
     "mongoose": "^5.10.11",
     "nodemailer": "^6.4.14",
     "redis": "^3.0.2",
