--- a/service/package.json
+++ b/service/package.json
@@ -37,7 +37,8 @@
     "redis": "^3.0.2",
     "require-context": "^1.1.0",
     "saslprep": "^1.0.3",
-    "svg-captcha": "^1.4.0"
+    "svg-captcha": "^1.4.0",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
