--- a/.gitignore
+++ b/.gitignore
@@ -153,7 +153,7 @@ dist
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
-
+service/public/images
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
