--- a/client/front/pc_web_app/package.json
+++ b/client/front/pc_web_app/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "css-loader": "^5.0.0",
+    "dart-sass": "^1.25.0",
     "dayjs": "^1.9.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
