--- a/client/front/pc_web_app/package.json
+++ b/client/front/pc_web_app/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^3.2.6",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "css-loader": "^5.0.0",
@@ -16,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "qs": "^6.9.4",
+    "tinymce": "^5.6.1",
     "uuid": "^8.3.1",
     "vee-validate": "^3.4.3",
     "vue": "^2.6.11",
